c2m2 Removed added tent in kiddyland c2m2 Removed some angled clips c3m2 Fixed issue with parachutist spawning

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -98,7 +98,7 @@ add:
 	"count" "5"
 }
 ; --- Single Pickup Weapon Only
-; --- NOTE: CAN be used for single pickup weapons in versus
+; --- NOTE: Can be used for single pickup weapons in versus
 ; --- NOTE: Requires reserve ammo to be specified, otherwise it will have none (value will not exceed max allowed)
 add:
 {
