--- a/cfg/stripper/maps/c3m2_swamp.cfg
+++ b/cfg/stripper/maps/c3m2_swamp.cfg
@@ -24,7 +24,7 @@ filter:
 	"hammerid" "1327939"
 }
 ; --- Fix parachutist not spawning in the same location for both teams and having different items
-; --- Instead of using templates, we spawn both, then kill one set when we decide which one to use
+; --- Remove original entities and add our own in a fixed position
 filter:
 {
 	"targetname" "case_parachute"
@@ -35,95 +35,228 @@ filter:
 {
 	"targetname" "template_parachute_2"
 }
-; --- Remove throwable/healing item spawns from the parachutist
 {
-	;"classname" "weapon_molotov_spawn"
 	"targetname" "parachute_1_items"
 }
 {
-	;"classname" "weapon_pipe_bomb_spawn"
 	"targetname" "parachute_2_items"
 }
-modify:
 {
-	match:
-	{
-		"hammerid" "1250696"
-	}
-	delete:
-	{
-		"OnMapSpawn" "case_parachutePickRandom0-1"
-	}
-	insert:
-	{
-		"OnMapSpawn" "parachute_random_versus,PickRandom,,0,-1"
-	}
+	"targetname" "parachute_1_remarkable"
+}
+{
+	"targetname" "parachute_1_itemshelf"
+}
+{
+	"targetname" "parachute_bag1"
+}
+{
+	"targetname" "parachute_rope_2_bottom"
+}
+{
+	"targetname" "parachute_rope_2_top"
+}
+{
+	"targetname" "parachute_rope_1_bottom"
+}
+{
+	"targetname" "parachute_rope_1_top"
+}
+{
+	"targetname" "parachute_ragdoll_1"
+}
+{
+	"targetname" "parachute_1_weapon"
+}
+{
+	"targetname" "parachute_1"
+}
+{
+	"targetname" "parachute_2_remarkable"
+}
+{
+	"targetname" "parachute_2_itemshelf"
+}
+{
+	"targetname" "parachute_2_weapon"
+}
+{
+	"targetname" "parachute_2_rope_2_bottom"
+}
+{
+	"targetname" "parachute_2_rope_2_top"
+}
+{
+	"targetname" "parachute_2_rope_1_bottom"
+}
+{
+	"targetname" "parachute_2_rope_1_top"
+}
+{
+	"targetname" "parachute_2_lengthconstraint"
+}
+{
+	"targetname" "parachute_2_ragdoll"
+}
+{
+	"targetname" "parachute_bag2"
+}
+{
+	"targetname" "parachute_2"
 }
 add:
 {
-	"classname" "logic_versus_random"
-	"targetname" "parachute_random_versus"
-	; --- Parachute 1 - Kill 2
-	"OnRandom01" "parachute_2_remarkable,Kill,,0,-1"
-	"OnRandom01" "parachute_2_itemshelf,Kill,,0,-1"
-	"OnRandom01" "parachute_2_weapon,Kill,,0,-1"
-	"OnRandom01" "parachute_2_items,Kill,,0,-1"
-	"OnRandom01" "parachute_2_rope_2_bottom,Kill,,0,-1"
-	"OnRandom01" "parachute_2_rope_2_top,Kill,,0,-1"
-	"OnRandom01" "parachute_2_rope_1_bottom,Kill,,0,-1"
-	"OnRandom01" "parachute_2_rope_1_top,Kill,,0,-1"
-	"OnRandom01" "parachute_2_lengthconstraint,Kill,,0,-1"
-	"OnRandom01" "parachute_2_ragdoll,Kill,,0,-1"
-	"OnRandom01" "parachute_bag2,Kill,,0,-1"
-	"OnRandom01" "parachute_2,Kill,,0,-1"
-	"OnRandom01" "parachute_1_itemshelf,Kill,,2,-1"
-	; --- Parachute 2 - Kill 1
-	"OnRandom02" "parachute_1_remarkable,Kill,,0,-1"
-	"OnRandom02" "parachute_1_itemshelf,Kill,,0,-1"
-	"OnRandom02" "parachute_bag1,Kill,,0,-1"
-	"OnRandom02" "parachute_1_items,Kill,,0,-1"
-	"OnRandom02" "parachute_rope_2_bottom,Kill,,0,-1"
-	"OnRandom02" "parachute_rope_2_top,Kill,,0,-1"
-	"OnRandom02" "parachute_rope_1_bottom,Kill,,0,-1"
-	"OnRandom02" "parachute_rope_1_top,Kill,,0,-1"
-	"OnRandom02" "parachute_ragdoll_1,Kill,,0,-1"
-	"OnRandom02" "parachute_1_weapon,Kill,,0,-1"
-	"OnRandom02" "parachute_1,Kill,,0,-1"
-	"OnRandom02" "parachute_2_itemshelf,Kill,,2,-1"
+	"classname" "prop_dynamic_override"
+	"origin" "-6281.34 4315.57 327.043"
+	"angles" "0 75 0"
+	"model" "models/props_swamp/parachute01.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"targetname" "para_1"
 }
-; --- Make both parachutists have a chance of carrying pills
-;modify:
-;{
-;	match:
-;	{
-;		"targetname" "parachute_1_items"
-;	}
-;	replace:
-;	{
-;		"spawnflags" "0"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "parachute_2_items"
-;	}
-;	replace:
-;	{
-;		"spawnflags" "0"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"classname" "weapon_adrenaline_spawn"
-;		"targetname" "parachute_2_items"
-;	}
-;	replace:
-;	{
-;		"classname" "weapon_pain_pills_spawn"
-;	}
-;}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6258 4318.11 148.08"
+	"angles" "-24.5 270 0"
+	"model" "models/props_swamp/parachute_bag01.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6261.63 4323.18 98"
+	"angles" "0 45 0"
+	"model" "models/DeadBodies/parachutist.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"targetname" "para_ragdoll_1"
+}
+{
+	"classname" "weapon_spawn"
+	"origin" "-6255 4327 140.733"
+	"angles" "45 120 0"
+	"weapon_selection" "tier1_any"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "18"
+	"count" "5"
+}
+{
+	"classname" "info_remarkable"
+	"origin" "-6260.17 4323.86 88.44"
+	"contextsubject" "c3m2_parachutist"
+}
+{
+	"classname" "keyframe_rope"
+	"origin" "-6257.3 4322.34 157.767"
+	"targetname" "para_rope_2_bottom"
+	"parentname" "para_ragdoll_1"
+	"Width" "2"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "move_rope"
+	"origin" "-6164.34 4314.47 382.767"
+	"targetname" "para_rope_2_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_2_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
+
+{
+	"classname" "move_rope"
+	"origin" "-6320.34 4223.47 312.767"
+	"targetname" "para_rope_2_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_2_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "move_rope"
+	"origin" "-6248.34 4230.47 305.767"
+	"targetname" "para_rope_2_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_2_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"spawnflags" "0"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "keyframe_rope"
+	"origin" "-6262.95 4327.99 157.767"
+	"targetname" "para_rope_1_bottom"
+	"parentname" "para_ragdoll_1"
+	"Width" "2"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "move_rope"
+	"origin" "-6398.34 4388.47 399.767"
+	"targetname" "para_rope_1_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_1_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "move_rope"
+	"origin" "-6271.34 4427.47 339.767"
+	"targetname" "para_rope_1_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_1_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
+{
+	"classname" "move_rope"
+	"origin" "-6382.34 4255.47 393.767"
+	"targetname" "para_rope_1_top"
+	"parentname" "para_1"
+	"NextKey" "para_rope_1_bottom"
+	"Width" "1"
+	"TextureScale" "1"
+	"Subdiv" "2"
+	"Slack" "25"
+	"RopeMaterial" "cable/cable.vmt"
+	"PositionInterpolator" "2"
+	"MoveSpeed" "64"
+}
 ; --- Fix bucket pills, they now spawn naturally like any other set of pills
 filter:
 {
