--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -576,17 +576,17 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block jumping on the buggies ride
-{
-	"classname" "env_physics_blocker"
-	"origin" "-1341 -1333 401"
-	"angles" "0 10 0"
-	"mins" "-106 -10 -367"
-	"maxs" "106 10 367"
-	"boxmins" "-106 -10 -367"
-	"boxmaxs" "106 10 367"
-	"initialstate" "1"
-	"BlockType" "1"
+; --- Block jumping on the buggies ride (can be re-enabled if angled blockers get fixed) (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "-1341 -1333 401"
+;	"angles" "0 10 0"
+;	"mins" "-106 -10 -367"
+;	"maxs" "106 10 367"
+;	"boxmins" "-106 -10 -367"
+;	"boxmaxs" "106 10 367"
+;	"initialstate" "1"
+;	"BlockType" "1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -596,18 +596,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block jumping on the trains ride
-{
-	"classname" "env_physics_blocker"
-	"origin" "-2114 -564 401"
-	"angles" "0 10 0"
-	"mins" "-106 -10 -367"
-	"maxs" "106 10 367"
-	"boxmins" "-106 -10 -367"
-	"boxmaxs" "106 10 367"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+; --- Block jumping on the trains ride (can be re-enabled if angled blockers get fixed) (#34)
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "-2114 -564 401"
+;	"angles" "0 10 0"
+;	"mins" "-106 -10 -367"
+;	"maxs" "106 10 367"
+;	"boxmins" "-106 -10 -367"
+;	"boxmaxs" "106 10 367"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
 {
 	"classname" "env_physics_blocker"
 	"origin" "-2176 -256 441"
@@ -1209,25 +1209,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 	"rendercolor" "74 104 149"
-}
-; --- Tent in kiddyland by the buggies ride
-{
-	"classname" "prop_dynamic"
-	"origin" "-962 -762 -124"
-	"angles" "0 90 0"
-	"model" "models/props_misc/fairground_tent_closed.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"rendercolor" "83 152 189"
-}
-; --- Clipping for tent
-{
-	"classname" "env_physics_blocker"
-	"origin" "-962 -762 391"
-	"mins" "-64 -64 -377"
-	"maxs" "64 64 377"
-	"initialstate" "1"
-	"BlockType" "1"
 }
 ; --- Small pipe to help infected jump into the room above the slanted roof in kiddyland, the pipe is only solid to infected
 {
