c10m4 Blocked LOS under all vehicles around the church c10m4 Blocked LOS under news van by the event c10m4 Prevented a stuck spot behind hedge by the yellow house near the church

--- a/cfg/stripper/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/maps/c10m4_mainstreet.cfg
@@ -517,6 +517,178 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Block LOS under vehicles around the church
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_bus_church_1,AddOutput,mins -1 -204 -13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_1,AddOutput,maxs 1 204 13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_1,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2a,AddOutput,mins -1 -90 -13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2a,AddOutput,maxs 1 90 13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2b,AddOutput,mins -45 -1 -13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2b,AddOutput,maxs 45 1 13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2c,AddOutput,mins -1 -90 -13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2c,AddOutput,maxs 1 90 13,0,-1"
+	"OnMapSpawn" "losfix_bus_church_2c,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_truck_quikbuy,AddOutput,mins -55 -1 -19,0,-1"
+	"OnMapSpawn" "losfix_truck_quikbuy,AddOutput,maxs 55 1 19,0,-1"
+	"OnMapSpawn" "losfix_truck_quikbuy,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_humvee_graveyard,AddOutput,mins -93 -1 -14,0,-1"
+	"OnMapSpawn" "losfix_humvee_graveyard,AddOutput,maxs 93 1 14,0,-1"
+	"OnMapSpawn" "losfix_humvee_graveyard,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_1,AddOutput,mins -1 -95 -15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_1,AddOutput,maxs 1 95 15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_1,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2a,AddOutput,mins -60 -1 -15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2a,AddOutput,maxs 60 1 15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2b,AddOutput,mins -1 -50 -15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2b,AddOutput,maxs 1 50 15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2c,AddOutput,mins -27 -1 -15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2c,AddOutput,maxs 27 1 15,0,-1"
+	"OnMapSpawn" "losfix_humvee_street_2c,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_a,AddOutput,mins -77 -1 -12,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_a,AddOutput,maxs 77 1 12,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_b,AddOutput,mins -1 -44 -12,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_b,AddOutput,maxs 1 44 12,0,-1"
+	"OnMapSpawn" "losfix_newsvan_street_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1a,AddOutput,mins -85 -1 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1a,AddOutput,maxs 85 1 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1b,AddOutput,mins -1 -50 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1b,AddOutput,maxs 1 50 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1c,AddOutput,mins -90 -1 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1c,AddOutput,maxs 90 1 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1c,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1d,AddOutput,mins -1 -50 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1d,AddOutput,maxs 1 50 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_1d,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2a,AddOutput,mins -1 -76 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2a,AddOutput,maxs 1 76 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2b,AddOutput,mins -50 -1 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2b,AddOutput,maxs 50 1 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2c,AddOutput,mins -1 -76 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2c,AddOutput,maxs 1 76 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2c,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2d,AddOutput,mins -50 -1 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2d,AddOutput,maxs 50 1 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2d,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2e,AddOutput,mins -1 -56 -16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2e,AddOutput,maxs 1 56 16,0,-1"
+	"OnMapSpawn" "losfix_bus_street_2e,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2632 -1532 -54"
+	"targetname" "losfix_bus_church_1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2643 -1169 -54"
+	"targetname" "losfix_bus_church_2a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2689 -1080 -54"
+	"targetname" "losfix_bus_church_2b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2735 -991 -54"
+	"targetname" "losfix_bus_church_2c"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2673 -2141 -38"
+	"targetname" "losfix_truck_quikbuy"
+}
+{
+	"classname" "func_brush"
+	"origin" "-4767 -799 -51"
+	"targetname" "losfix_humvee_graveyard"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2523 -873 -52"
+	"targetname" "losfix_humvee_street_1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2594 -549 -50"
+	"targetname" "losfix_humvee_street_2a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2535 -600 -50"
+	"targetname" "losfix_humvee_street_2b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2507 -589 -50"
+	"targetname" "losfix_humvee_street_2c"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2309 -1274 -53"
+	"targetname" "losfix_newsvan_street_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-2231 -1231 -53"
+	"targetname" "losfix_newsvan_street_b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1376 -1127 -49"
+	"targetname" "losfix_bus_street_1a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1292 -1076 -49"
+	"targetname" "losfix_bus_street_1b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1201 -1027 -49"
+	"targetname" "losfix_bus_street_1c"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1110 -978 -49"
+	"targetname" "losfix_bus_street_1d"
+}
+{
+	"classname" "func_brush"
+	"origin" "-623 -1230 -50"
+	"targetname" "losfix_bus_street_2a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-672 -1153 -50"
+	"targetname" "losfix_bus_street_2b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-721 -1076 -50"
+	"targetname" "losfix_bus_street_2c"
+}
+{
+	"classname" "func_brush"
+	"origin" "-756 -999 -50"
+	"targetname" "losfix_bus_street_2d"
+}
+{
+	"classname" "func_brush"
+	"origin" "-787 -942 -50"
+	"targetname" "losfix_bus_street_2e"
+}
 ; --- Clipping on car stoppers after the florist shop
 {
 	"classname" "env_physics_blocker"
@@ -608,7 +780,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Block LOS under TLS added delivery van
+; --- Block LOS under TLS delivery van
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "los_delivery_van_TLS_a,AddOutput,mins -1 -74 -13,0,-1"
@@ -645,8 +817,20 @@ filter:
 {
 	"hammerid" "1191781"
 }
-; --- Clipping for infected on pavement tiles on event street
+; --- Block LOS under news van by the event
 add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_newsvan_event,AddOutput,mins -104 -1 -11,0,-1"
+	"OnMapSpawn" "losfix_newsvan_event,AddOutput,maxs 104 1 11,0,-1"
+	"OnMapSpawn" "losfix_newsvan_event,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "1239 -3932 -54"
+	"targetname" "losfix_newsvan_event"
+}
+; --- Clipping for infected on pavement tiles on event street
 {
 	"classname" "env_physics_blocker"
 	"origin" "251 -3649 -64"
@@ -1188,7 +1372,15 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-
+; --- Prevent a stuck spot behind the hedge next to the ladder
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1936 -556 -26"
+	"mins" "-56 -10 -30"
+	"maxs" "56 10 30"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Infected ladders to climb on roof by the first news van
 {
 	"classname" "func_simpleladder"
