c11m3 fixed an issue with a prop in the power station area c12m4 fixed nav/pathing issue in the warehouse from the reworked route c12m4 fixed issue with warehouse button not being pressable when too close c12m4 adjusted path blocking in warehouse office room

--- a/cfg/stripper/maps/c11m3_garage.cfg
+++ b/cfg/stripper/maps/c11m3_garage.cfg
@@ -660,19 +660,20 @@ add:
 ; --- Fix props being invisible on low effects settings
 add:
 ; --- Transformers
-{
-	"classname" "prop_dynamic"
-	"origin" "-4256.38 2157 229"
-	"angles" "-90 270 0"
-	"model" "models/props_c17/substation_transformer01b.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"mincpulevel" "1"
-	"maxcpulevel" "1"
-	"fadescale" "1"
-	"fademindist" "500"
-	"fademaxdist" "1500"
-}
+; --- For some reason this specific one has a rendering issue only on dedicated servers
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-4256.38 2157 229"
+;	"angles" "-90 270 0"
+;	"model" "models/props_c17/substation_transformer01b.mdl"
+;	"solid" "0"
+;	"disableshadows" "1"
+;	"mincpulevel" "1"
+;	"maxcpulevel" "1"
+;	"fadescale" "1"
+;	"fademindist" "500"
+;	"fademaxdist" "1500"
+;}
 {
 	"classname" "prop_dynamic"
 	"origin" "-4264 2744.2 229"
