c5m2 adjusted los blocker under car by saferoom c4m2 added railings to stand on in the elevator c5m2 Reworked props and route changes at the start of the park c12m3 Solidify a non-solid tree by the bridge c5m2 Infected ladder to climb over the wall behind the stairs on the right side of the park entrance c5m2 Block survivors from jumping on the walls by the park entrance c5m2 Removed pill spawn in humvee c5m3 added a pipe to stand on at the ladder choke c4m1/4 moved one of the washer boxes at house by the sugarmill saferoom c4m2/3 added an ammo pile in the trailer near the start of the mill c4m2/3 added an ammo pile in the locker room c6m2 Prevent players from blocking the gates in the sewers c1m3 adjusted ammo pile after the escalators c11m4 reduced map distance to 500 updated template headers c1m1 added glow on event button when close enough to press it c1m1 Make railing in elevator solid so survivors can stand on it c1m1 removed spit block in the elevator c1m4 Add a railing elevator so survivors can stand on it c1m4 removed spit block in the elevator c13m2 fixed a typo that was preventing a change to the event from working c4m2/3 Clipping on door of small shack before the ramp c3m1 Hittable log in the open area on the left after the ferry c4m1/4 Block LOS under fence by the ladder before the playground prevented forklifts from breaking

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -26,7 +26,6 @@
 ; ==                 ENTITY TYPE FIX                 ==
 ; ==     Fix entities using the wrong class type     ==
 ; =====================================================
-; --- Always 
 modify:
 ; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
 ; --- prop_physics_multiplayer is essentially a legacy entity that functions identically to prop_physics but serves no purpose in L4D2, it does not affect networking overhead
@@ -38,29 +37,6 @@ modify:
 	replace:
 	{
 		"classname" "prop_physics"
-	}
-}
-; --- Replace all forklift models with the broken version to prevent physics issues when first hit
-{
-	match:
-	{
-		"classname" "prop_physics"
-		"model" "models/props/cs_assault/forklift.mdl"
-	}
-	replace:
-	{
-		"model" "models/props\cs_assault\forklift_brokenlift.mdl"
-	}
-}
-{
-	match:
-	{
-		"classname" "prop_physics_override"
-		"model" "models/props/cs_assault/forklift.mdl"
-	}
-	replace:
-	{
-		"model" "models/props\cs_assault\forklift_brokenlift.mdl"
 	}
 }
 
@@ -564,9 +540,16 @@ filter:
 }
 
 ; =====================================================
-; ==            HITTABLE RENDER DISTANCE             ==
+; ==            HITTABLE FIXES DISTANCE             ==
 ; ==   Prevent hittables from fading over distance   ==
 ; =====================================================
+; --- Prevent forklifts from breaking when hit
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "!self,RunScriptFile,forklifts_unbreakable,30,-1"
+}
+; --- Prevent hittables from fading over distance
 modify:
 {
 	match:
