--- a/cfg/stripper/maps/c12m3_bridge.cfg
+++ b/cfg/stripper/maps/c12m3_bridge.cfg
@@ -534,6 +534,16 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
+; --- Solidify a non-solid tree by the bridge
+{
+	"classname" "prop_dynamic"
+	"origin" "5553 -13119 -83"
+	"angles" "0 15 0"
+	"model" "models/props_foliage/trees_cluster01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
 ; --- Make the top section of the collapsed bridge block LOS
 {
 	"classname" "logic_auto"
