--- a/cfg/stripper/maps/c12m4_barn.cfg
+++ b/cfg/stripper/maps/c12m4_barn.cfg
@@ -1071,8 +1071,9 @@ add:
 	; --- Kill glow hints
 	"OnPressed" "warehouse_button_glow_trigger,Kill,,0,-1"
 	"OnPressed" "warehouse_button_glow_trigger2,Kill,,0,-1"
-	"OnPressed" "warehouse_button_prop_glow,StopGlowing,,0,-1"
-	"OnPressed" "warehouse_button_prop_glow_back,StopGlowing,,0,-1"
+	"OnPressed" "warehouse_glow_prop_timer,Kill,,0,-1"
+	"OnPressed" "warehouse_button_prop_glow,StopGlowing,,1,-1"
+	"OnPressed" "warehouse_button_prop_glow_back,StopGlowing,,1,-1"
 }
 ; --- Triggers to make button flash if survivors try to enter through the front
 {
