--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -7,11 +7,6 @@
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -60,6 +55,15 @@ add:
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
 add:
+; --- Hittable log in the open area on the left after the ferry
+{
+	"classname" "prop_physics"
+	"origin" "-3428 8714 -3"
+	"angles" "0 45 0"
+	"model" "models/props_foliage/swamp_fallentree01_bare.mdl"
+	"solid" "6"
+	"fadescale" "0"
+}
 ; --- Dumpster by the ladder near the upper house after the ferry
 {
 	"classname" "prop_physics"
@@ -1123,8 +1127,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
