--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -738,6 +738,18 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Block LOS under fence by the ladder before the playground
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,mins -192 -1 -3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,maxs 192 1 3,0,-1"
+	"OnMapSpawn" "losfix_ladder_fence,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3104 7385 98"
+	"targetname" "losfix_ladder_fence"
+}
 ; --- Clipping on balcony railing by the playground
 {
 	"classname" "env_physics_blocker"
@@ -1097,7 +1109,7 @@ add:
 	"origin" "3395 -856 110"
 	"targetname" "losfix_blue_pickup_b"
 }
-; --- Boxes in the boat garage by the sugarmill saferoom
+; --- Washer boxes at house by the sugarmill saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "3858 -810 97"
@@ -1108,8 +1120,8 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "3858 -767 97"
-	"angles" "1 270 -2"
+	"origin" "3550 -471 96"
+	"angles" "0 270 0"
 	"model" "models/props/cs_assault/washer_box.mdl"
 	"solid" "6"
 	"disableshadows" "1"
