--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -963,6 +963,15 @@ add:
 ; ==         Nerf ladder attacks for infected        ==
 ; =====================================================
 add:
+; --- Pipe to stand on at the ladder
+{
+	"classname" "prop_dynamic"
+	"origin" "5952 410 -99"
+	"angles" "0 0 -90"
+	"model" "models/props_pipes/pipeset08d_256_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Guard rails around the sewer ladder
 {
 	"classname" "prop_dynamic"
