--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -35,8 +35,8 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Add a pistol spawn to the saferoom
 add:
@@ -51,11 +51,6 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Make the deagle spawn in the gazebo consistent
 modify:
 {
@@ -196,7 +191,7 @@ add:
 	"classname" "prop_physics_override"
 	"origin" "385 2170 -188"
 	"angles" "0 54 0"
-	"model" "models/props\cs_assault\forklift_brokenlift.mdl"
+	"model" "models/props/cs_assault/forklift.mdl"
 	"solid" "6"
 	"targetname" "post_bumpers_forklift"
 	"fadescale" "0"
@@ -1170,8 +1165,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
