--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -7,8 +7,8 @@
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Ensure each gun type is in the saferoom
 modify:
@@ -33,11 +33,6 @@ modify:
 		
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
@@ -400,8 +395,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
