--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -28,7 +28,7 @@
 ; =====================================================
 modify:
 ; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
-; --- prop_physics_multiplayer is essentially a legacy entity that functions identically to prop_physics but serves no purpose in L4D2, it does not affect networking overhead
+; --- prop_physics_multiplayer is a legacy entity that functions identically to prop_physics_override but serves no purpose in L4D2, it does not affect networking overhead
 {
 	match:
 	{
