--- a/cfg/stripper/maps/c4m4_milltown_b.cfg
+++ b/cfg/stripper/maps/c4m4_milltown_b.cfg
@@ -1005,7 +1005,7 @@ add:
 	"origin" "3395 -856 110"
 	"targetname" "losfix_blue_pickup_b"
 }
-; --- Boxes in the boat garage by the sugarmill saferoom
+; --- Washer boxes at house by the sugarmill saferoom
 {
 	"classname" "prop_dynamic"
 	"origin" "3858 -810 97"
