--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -963,7 +963,7 @@ add:
 ; ==         Nerf ladder attacks for infected        ==
 ; =====================================================
 add:
-; --- Pipe to stand on at the ladder
+; --- Pipe to stand on at the ladder in the sewer
 {
 	"classname" "prop_dynamic"
 	"origin" "5952 410 -99"
