made a physics prop couch model unmovable removed forklift changes (updated l4d2_hittable_control instead) template updates

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -540,15 +540,9 @@ filter:
 }
 
 ; =====================================================
-; ==            HITTABLE FIXES DISTANCE             ==
-; ==   Prevent hittables from fading over distance   ==
+; ==                  HITTABLE FIXES                 ==
+; ==            Fix issues with hittables            ==
 ; =====================================================
-; --- Prevent forklifts from breaking when hit
-add:
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "!self,RunScriptFile,forklifts_unbreakable,30,-1"
-}
 ; --- Prevent hittables from fading over distance
 modify:
 {
@@ -1590,6 +1584,17 @@ modify:
 		"model" "models/props_interiors/sofa01.mdl"
 	}
 	replace:
+	{
+		"spawnflags" "8"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_interiors/couch.mdl"
+	}
+	insert:
 	{
 		"spawnflags" "8"
 	}
@@ -3308,17 +3313,6 @@ modify:
 	{
 		"classname" "prop_physics"
 		"model" "models/props_furniture/cafe_barstool1.mdl"
-	}
-	insert:
-	{
-		"spawnflags" "4"
-	}
-}
-{
-	match:
-	{
-		"classname" "prop_physics"
-		"model" "models/props_interiors/couch.mdl"
 	}
 	insert:
 	{
