--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -71,8 +71,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Make the weapons before the diner single pickup to get survivors to go in the diner
 filter:
@@ -123,11 +123,6 @@ modify:
 		"weapon_selection" "weapon_shotgun_chrome"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 ; --- Remove health cabinets
 filter:
 {
@@ -1128,8 +1123,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
