--- a/cfg/stripper/maps/c5m5_bridge.cfg
+++ b/cfg/stripper/maps/c5m5_bridge.cfg
@@ -145,8 +145,8 @@ add:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Ensure each weapon type is available in the saferoom
 modify:
@@ -181,11 +181,6 @@ modify:
 		"origin" "-11892 5971 549"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 add:
 ; --- Melee weapon spawn outside the saferoom
 {
@@ -598,8 +593,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
