--- a/cfg/stripper/maps/c4m3_sugarmill_b.cfg
+++ b/cfg/stripper/maps/c4m3_sugarmill_b.cfg
@@ -22,11 +22,6 @@ filter:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
-; =====================================================
-
-; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
@@ -1195,36 +1190,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Railings in the elevator to stand on
-{
-	"classname" "prop_dynamic"
-	"origin" "-1525 -9568 139"
-	"angles" "0 90 0"
-	"model" "models/props_mill/mill_railing_36.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"parentname" "elevator"
-	"rendercolor" "219 204 23"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-1525 -9528 139"
-	"angles" "0 90 0"
-	"model" "models/props_mill/mill_railing_36.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"parentname" "elevator"
-	"rendercolor" "219 204 23"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "-1525 -9548 160"
-	"mins" "-1 -37 -22"
-	"maxs" "1 37 22"
-	"initialstate" "1"
-	"BlockType" "0"
-	"parentname" "elevator"
-}
 ; --- Metal plates on the outside of the elevator to block scratching and help with spawns
 {
 	"classname" "prop_dynamic"
@@ -1311,9 +1276,40 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
+add:
+; --- Railings in the elevator to stand on
+{
+	"classname" "prop_dynamic"
+	"origin" "-1525 -9568 139"
+	"angles" "0 90 0"
+	"model" "models/props_mill/mill_railing_36.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "elevator"
+	"rendercolor" "219 204 23"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1525 -9528 139"
+	"angles" "0 90 0"
+	"model" "models/props_mill/mill_railing_36.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"parentname" "elevator"
+	"rendercolor" "219 204 23"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1525 -9548 160"
+	"mins" "-1 -37 -22"
+	"maxs" "1 37 22"
+	"initialstate" "1"
+	"BlockType" "0"
+	"parentname" "elevator"
+}
 
 
 ; ############  MAP SOUND AND GFX CHANGES  ############
