--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -61,8 +61,8 @@ modify:
 
 ; ################  ITEM SPAWN CHANGES  ###############
 ; =====================================================
-; ==                  SAFEROOM ITEMS                 ==
-; ==    Saferoom item spawns - ammo piles, weapons   ==
+; ==           PILL / ITEM / WEAPON SPAWNS           ==
+; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 ; --- Make weapons in saferoom always have a shotgun and SMG
 modify:
@@ -86,11 +86,6 @@ modify:
 		"weapon_selection" "any_smg"
 	}
 }
-
-; =====================================================
-; ==           PILL / ITEM / WEAPON SPAWNS           ==
-; ==   Remove or change pill, item & weapon spawns   ==
-; =====================================================
 filter:
 ; --- Remove pill spawns by the humvee outside saferoom
 {
@@ -1838,8 +1833,8 @@ add:
 }
 
 ; =====================================================
-; ==                   LADDER NERF                   ==
-; ==         Nerf ladder attacks for infected        ==
+; ==             LADDER / ELEVATOR NERF              ==
+; ==   Nerf ladder & elevator attacks for infected   ==
 ; =====================================================
 
 
