completed work on dbdc map 1 c4m1/4 readded treehouse gun c10m4 replaced the cement truck with an ambulance updated point_nav_attribute_region template to use script_nav_attribute_region instead

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -268,18 +268,19 @@ add:
 ; --- point_nav_attribute_region can be used to assign attributes to nav mesh regions defined by the spawnflags used
 ; --- Once placed these entities must be activated by a logic_auto
 ; --- 4096: Obscured - allows SI and mobs to spawn without LOS being blocked, 2048: Checkpoint - saferoom nav area
+; --- remove_attributes removes the attributes specified instead of adding them
 add:
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "[nav name],ApplyNavAttributes,,10,-1"
 }
 {
-	"classname" "point_nav_attribute_region"
+	"classname" "script_nav_attribute_region"
 	"origin" "[x y z]"
-	"mins" "-32 -32 -32"
-	"maxs" "32 32 32"
+	"extent" "[x y z]"
 	"spawnflags" "[n]"
 	"targetname" "[nav name]"
+	"remove_attributes" "0"
 }
 ; --- func_nav_blocker can be used to block or unblock nav mesh regions to improve pathing around obstacles or prevent issues with nav connections
 ; --- Once placed these entities must be activated by firing either BlockNav or UnblockNav after a small delay
