completed work on dbd map 2 c3m1 changed log to broken hatchback

--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -58,11 +58,22 @@ add:
 ; --- Hittable log in the open area on the left after the ferry
 {
 	"classname" "prop_physics"
-	"origin" "-3428 8714 -3"
-	"angles" "0 45 0"
-	"model" "models/props_foliage/swamp_fallentree01_bare.mdl"
+	"origin" "-3605 8503 5"
+	"angles" "0 30 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked.mdl"
 	"solid" "6"
 	"fadescale" "0"
+	"rendercolor" "91 109 67"
+	"targetname" "hittable_car_post_ferry_green"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-3605 8503 5"
+	"angles" "0 30 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
+	"solid" "6"
+	"fadescale" "0"
+	"parentname" "hittable_car_post_ferry_green"
 }
 ; --- Dumpster by the ladder near the upper house after the ferry
 {
