--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -8,6 +8,14 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+; --- Remove scripted common / special infected spawns
+filter:
+{
+	"classname" "info_zombie_spawn"
+}
+{
+	"classname" "commentary_zombie_spawner"
+}
 ; --- Make going down the ladder count as leaving the saferoom
 add:
 {
@@ -54,11 +62,6 @@ add:
 	"spawnflags" "2048"
 	"targetname" "nav_remove_saferoom"
 	"remove_attributes" "1"
-}
-; --- Remove scripted common spawns
-filter:
-{
-	"classname" "info_zombie_spawn"
 }
 ; --- Remove the preacher car event
 filter:
@@ -1493,6 +1496,10 @@ filter:
 ; --- Remove helicopter sounds
 {
 	"targetname" "Heli_Fly_Sound"
+}
+; --- Remove loud sound from rock hitting helicopter
+{
+	"targetname" "Rock_Strike_sound"
 }
 
 ; =====================================================
