--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -267,7 +267,7 @@ add:
 ; --- Entities for modifying anything nav mesh related
 ; --- point_nav_attribute_region can be used to assign attributes to nav mesh regions defined by the spawnflags used
 ; --- Once placed these entities must be activated by a logic_auto
-; --- 4096: Obscured - allows SI and mobs to spawn without LOS being blocked, 2048: Checkpoint - saferoom nav area
+; --- 4096: Obscured (allows SI and mobs to spawn without LOS being blocked), 2048: Checkpoint (saferoom nav area)
 ; --- remove_attributes removes the attributes specified instead of adding them
 add:
 {
