c7m1 fixed players getting stuck when opening the 2nd train car door at the same time it is automatically opened

--- a/cfg/stripper/maps/c7m1_docks.cfg
+++ b/cfg/stripper/maps/c7m1_docks.cfg
@@ -84,7 +84,8 @@ modify:
 	insert:
 	{
 		"OnTimeUp" "tankdoorout,Open,,20,-1"
-		"OnTimeUp" "tankdoorout_button,Kill,,20,-1"
+		"OnTimeUp" "tankdoorout_button,Disable,,20,-1"
+		"OnTimeUp" "tankdoorout_button,Kill,,21,-1"
 	}
 }
 
