completed work on dbd map 3 added line posts to junk prop filters

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -2224,6 +2224,10 @@ filter:
 	"classname" "prop_physics"
 	"model" "models/props_street/garbage_can.mdl"
 }
+{
+	"classname" "prop_physics"
+	"model" "models/props_unique/airport/line_post.mdl"
+}
 
 ; =====================================================
 ; ==                PROP COLLISION FIX               ==
