--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -637,11 +637,11 @@ filter:
 }
 ; --- Remove obscured nav properties that lets infected spawn while in vision of survivors unfairly
 add:
-; --- Roof by the event / edge of roof
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "remove_obscured_areas,ApplyNavAttributes,,10,-1"
 }
+; --- Roof by the event / edge of roof
 {
 	"classname" "script_nav_attribute_region"
 	"origin" "-602 1001 -4"
@@ -1392,7 +1392,6 @@ filter:
 ; --- Add texture for unmarked breakable walls by the end of the map and fix material type
 modify:
 {
-	; --- Allow infected to actually break this wall
 	match:
 	{
 		"hammerid" "1466493"
@@ -1401,6 +1400,7 @@ modify:
 	{
 		"OnBreak" "unmarked_breakwall_texture1,Kill,,0,-1"
 	}
+	; --- Allow infected to actually break this wall
 	replace:
 	{
 		"BreakableType" "1"
@@ -1613,7 +1613,7 @@ filter:
 {
 	"model" "models/props_debris/concrete_debris128pile001a.mdl"
 }
-; --- Fix color, shadows, and collision on dynamic props
+; --- Fix color, shadows, and collision on props
 modify:
 {
 	match:
@@ -1773,6 +1773,10 @@ modify:
 	delete:
 	{
 		"globalname" "warehouse_lamps"
+	}
+	replace:
+	{
+		"solid" "0"
 	}
 }
 ; --- Replace open van props with correct models and glass
@@ -2399,7 +2403,7 @@ filter:
 {
 	"targetname" "church_guy"
 }
-; --- Remove miscellanous sound effects from the map, e.g. doors opening, wood breaking, etc.
+; --- Remove miscellanous sound effects from the map
 {
 	"message" "ambient/ambience/urban_rooftop_ambloop02.wav"
 }
@@ -2447,7 +2451,6 @@ modify:
 		"angles" "35 341 35"
 	}
 }
-
 
 
 ; ###############  TRIGGERS AND BRUSHES  ##############
